src/test/ui/issues/issue-46186.rs
// run-rustfix

pub struct Struct {
    pub a: usize,
};
//~^ ERROR expected item, found `;`

fn main() {}
